tests/negative/test_dot_raw_cn_memb_no_cn_asgn.orb
fnc main () () {
    eval (sym (a \()));
    eval (sym (b:(raw cn) \(\() ,a)));
    = (. b 1) \();
};